// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAccount menu should be visible when menu button clicked 1`] = `
<div>
  <nav
    class="container"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Add account"
      class="button"
      role="button"
      tabindex="0"
      title="Add account"
      type="button"
    >
      +
    </button>
    <div
      class="menu"
      role="menu"
    >
      <h4
        class="menuHeading"
      >
        Add account
      </h4>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          <a
            href="/account/create"
            role="menuitem"
            tabindex="-1"
          >
            Create new account
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            href="/account/import"
            role="menuitem"
            tabindex="-1"
          >
            Import account from pre-existing phrase
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`AddAccount should render 1`] = `
<div>
  <nav
    class="container"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Add account"
      class="button"
      role="button"
      tabindex="0"
      title="Add account"
      type="button"
    >
      +
    </button>
  </nav>
</div>
`;
